fixed vertical alignment when displaying error messages

--- a/extensions/forms-experiments2-essentials.less
+++ b/extensions/forms-experiments2-essentials.less
@@ -69,7 +69,8 @@ input[type="datetime-local"],
 select,
 textarea {
 	#restoreFontsize;
-	display: block;
+	display: inline-block;
+	vertical-align: top;
 	margin: 0;
 	width: 100%;
 	line-height: normal;
@@ -108,7 +109,8 @@ textarea {
 		}
 		label.error {
 			#restoreFontsize;
-			display: block;
+			clear: left;
+			float: left;
 			color: @errorcolor;
 		}
 	}
@@ -131,10 +133,6 @@ textarea {
 					color: @errorcolor;
 				}
 			}
-		}
-		label.error {
-			display: block;
-			padding: 0;
 		}
 	}
 	.rating {
@@ -166,11 +164,6 @@ textarea {
 			}
 			.star:hover,
 			.star:hover ~ .star { #starOn; }
-		}
-		label.error {
-			position: absolute;
-			left: 100%;
-			margin-left: 1em;
 		}
 	}
 	@media screen and (min-width:481px) {
@@ -209,6 +202,7 @@ textarea {
 // buttons
 .button {
 	display: inline-block;
+	vertical-align: top;
 	margin: 0 10px 0 0;
 	border: 1px outset;
 	padding: 1px 10px;
@@ -233,5 +227,12 @@ textarea {
 	.button {
 		margin-left: 10px;
 		margin-right: 0;
+	}
+	.forth {
+		float: right;
+	}
+	.back {
+		overflow: hidden; // as float filler
+		text-align: left;
 	}
 }
