--- a/extensions/forms-experiments2.less
+++ b/extensions/forms-experiments2.less
@@ -135,7 +135,8 @@ select,
 textarea {
 	#restoreFontsize;
 	#transition;
-	display: block;
+	display: inline-block;
+	vertical-align: top;
 	margin: 0;
 	width: 100%;
 	line-height: normal;
@@ -201,7 +202,8 @@ fieldset {
 			margin-right: -1px; // fixes rounding issues on android
 		}
 		label.error {
-			display: inline-block;
+			clear: left;
+			float: left;
 			padding: 3px 8px;
 			background: #fff;
 			font-size: 11px;
@@ -230,7 +232,8 @@ fieldset {
 	}
 	.ticks {
 		#restoreFontsize;
-		display: block;
+		display: inline-block;
+		vertical-align: top;
 		label { // use with .formitem
 			#transition;
 			display: inline-block;
@@ -251,12 +254,10 @@ fieldset {
 				}
 			}
 		}
-		label.error {
-			display: block;
-		}
 	}
 	.rating {
-		float: left;
+		display: inline-block;
+		vertical-align: top;
 		padding-top: 8px;
 		padding-bottom: 10px;
 		width: auto;
@@ -287,11 +288,6 @@ fieldset {
 			.star:hover,
 			.star:hover ~ .star { #starOn; }
 		}
-		// label.error {
-		// 	position: absolute;
-		// 	left: 100%;
-		// 	margin-left: 1em;
-		// }
 	}
 	@media screen and (min-width:481px) {
 		.col1of1 { width: 100%; }
@@ -347,6 +343,7 @@ fieldset {
 	#transition;
 	#restoreFontsize;
 	display: inline-block;
+	vertical-align: top;
 	border: none;
 	padding: 9px 30px;
 	text-decoration: none;
